# kewin-craft

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix  valgrind-out.txt  vertices.cpp
assets/shaders/: frag.glsl  vert.glsl
include/glad/: gl.h
src/: app.cpp  app.hpp  block.hpp  block_vertex_array.cpp  block_vertex_array.hpp  camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  cursor.cpp  cursor.hpp  gl.c  main.cpp  map.cpp  map.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/app/: application.cpp  application.hpp
src/gameplay/: camera.cpp  camera.hpp
src/graphics/: block_vertex_array.cpp  block_vertex_array.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/platform/: cursor.cpp  cursor.hpp  window.cpp  window.hpp
src/world/: block.hpp  chunk.cpp  chunk.hpp  chunk_coordinate.hpp  map.cpp  map.hpp  world.cpp  world.hpp
